# CME_OI-Intrady_vol2vol_interceptor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gold_0dte_vol2vol.csv  main.py  project_requirements.txt  pyproject.toml
.github/workflows/: ci.yml  deploy-interceptor.yml
dags/: vol2vol_asian_session.py  vol2vol_us_session.py
dags/shared/: tasks.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  page.module.css  page.tsx
frontend/src/app/api/candles/: route.ts
frontend/src/app/api/days/: route.ts
frontend/src/app/api/ea/: route.ts
frontend/src/app/api/latest/: route.ts
frontend/src/app/api/open/: route.ts
frontend/src/app/api/sd/: route.ts
frontend/src/app/api/snapshots/: route.ts
frontend/src/app/api/v1/latest/: route.ts
frontend/src/app/backtest/: page.tsx
frontend/src/components/: DistributionCharts.tsx  IntradayOiPanel.tsx  MetaGrid.tsx  PriceChart.tsx  Skeleton.tsx  VolSparkline.tsx
frontend/src/data/: data.json
frontend/src/lib/: api.test.ts  api.ts  backtest.test.ts  backtest.ts  candles.test.ts  candles.ts  gcs.ts  open.ts  snaps.ts  ui.ts
intraday/: gold_0dte_20260416_185852.json  gold_intraday_20260416_200937.json  gold_intraday_20260416_202101.json  gold_intraday_20260416_203603.json
oi/: gold_oi_20260416_200940.json  gold_oi_20260416_202104.json  gold_oi_20260416_203606.json
src/: config.py  interceptor.py
src/utils/: data_handler.py  hasher.py
