[project]
name = "cme-oi-intrady-vol2vol-interceptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "google-cloud-storage>=2.0.0",
    "pendulum>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
